--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "fastapi (>=0.128.0,<0.129.0)",
     "uvicorn[standard] (>=0.40.0,<0.41.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
-    "alembic (>=1.17.2,<2.0.0)"
+    "alembic (>=1.17.2,<2.0.0)",
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "sqlalchemy-utils (>=0.42.1,<0.43.0)"
 ]
 
 
