--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,12 @@ dependencies = [
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
     "pydantic-settings (>=2.12.0,<3.0.0)",
-    "sqlalchemy-utils (>=0.42.1,<0.43.0)"
+    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
+    "asyncpg (>=0.31.0,<0.32.0)",
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "passlib (>=1.7.4,<2.0.0)",
+    "argon2-cffi (>=25.1.0,<26.0.0)"
 ]
 
 
