--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,10 +14,12 @@ FROM nginx:1.28.0-alpine as frontend
 
 WORKDIR /app
 
-COPY --from=frontend-builder /app/dist/account-v2 /usr/share/nginx/html
+COPY --from=frontend-builder /app/dist/accounts-v2 /usr/share/nginx/html
 
 COPY nginx.conf /etc/nginx/conf.d/frontend.conf
 
 EXPOSE 8080
 
 CMD ["nginx", "-g", "daemon off;"]
+
+# accounts-v2
