[Both][Tested] Fixed the CORS issueeeeeee dammmmm it => It was the proxy-headers of uvicorn

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,6 +39,6 @@ USER backuser
 
 EXPOSE 5050
 
-CMD ["sh", "-c", "poetry run alembic upgrade head && poetry run uvicorn main:app --host 0.0.0.0 --port 5050"]
+CMD ["sh", "-c", "poetry run alembic upgrade head && poetry run uvicorn main:app --host 0.0.0.0 --port 5050 --proxy-headers --forwarded-allow-ips='*'"]
 
 # accounts-v2
